--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -37,6 +37,7 @@
   .about-divider {
     top: 104px;
     width: 103% !important;
+    height: 82px;
   }
 }
 
